--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,16 @@ header{
 
 header h1{
     text-align: center;
+    font-style: italic;
 }
 header p{
     text-align: right;
+    
 }
+
+img{
+    width: 400px;
+    height:500px;
+    object-fit: cover;
+}
+
