--- a/styles.css
+++ b/styles.css
@@ -5,23 +5,27 @@
     padding: 0;
 }
 
-body {
+body{
     background-image: radial-gradient(
         circle closest-corner at 90% 5%,
         #F8DE22 0%,
         #FEFFAC 40%,
-        #D5FFE4 100%
+        #F5F7F8 100%
     );
+    
     height: 100vh;
     overflow: hidden;
     padding: 2rem;
     transition: background-image 0.5s;
 }
 
-
+body.active{
+    background-image: radial-gradient(farthest-corner at 90% 5%,#B4B4B3 0%, #252B48 30%);
+}
 
 h2{
     font-size: 2.5rem;
+    
 }
 p, h3{
     font-size: 2rem;
@@ -71,14 +75,7 @@ input:checked + .button::before{
 }
 
 
-input:checked + label ~ body {
-    background-image: radial-gradient(
-        circle closest-corner at 90% 5%,
-        #F8DE22 0%,
-        #FEFFAC 40%,
-        #252B48 100%
-    );
-}
+
 .toggle{
     display: none;
 }
@@ -98,6 +95,7 @@ input:checked + label ~ body {
     border: 1px ridge rgba(0, 0, 0, 0.3);
     padding: 3rem;
     border-radius: 15px;
+    background-color: #FFFBF5;
 }
 
 hr {
@@ -115,7 +113,7 @@ svg rect{
     width: 100%;
     height: 100%;
     fill: transparent;
-    stroke: red;
+   
 
 }
 
